third_party/blink/web_tests/external/wpt/mediacapture-streams/idlharness.https.window-expected.txt
This is a testharness.js-based test.
Found 77 tests; 74 PASS, 3 FAIL, 0 TIMEOUT, 0 NOTRUN.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
FAIL Partial interface Navigator: original interface defined assert_true: Original interface should be defined expected true got false
FAIL Partial interface Navigator[2]: original interface defined assert_true: Original interface should be defined expected true got false
PASS Partial interface MediaDevices: original interface defined
PASS MediaStream interface: existence and properties of interface object
PASS MediaStream interface object length
PASS MediaStream interface object name
PASS MediaStream interface: existence and properties of interface prototype object
PASS MediaStream interface: existence and properties of interface prototype object's "constructor" property
PASS MediaStream interface: existence and properties of interface prototype object's @@unscopables property
PASS MediaStream interface: attribute id
PASS MediaStream interface: operation getAudioTracks()
PASS MediaStream interface: operation getVideoTracks()
PASS MediaStream interface: operation getTracks()
PASS MediaStream interface: operation getTrackById(DOMString)
PASS MediaStream interface: operation addTrack(MediaStreamTrack)
PASS MediaStream interface: operation removeTrack(MediaStreamTrack)
PASS MediaStream interface: operation clone()
PASS MediaStream interface: attribute active
PASS MediaStream interface: attribute onaddtrack
PASS MediaStream interface: attribute onremovetrack
PASS MediaStreamTrack interface: existence and properties of interface object
PASS MediaStreamTrack interface object length
PASS MediaStreamTrack interface object name
PASS MediaStreamTrack interface: existence and properties of interface prototype object
PASS MediaStreamTrack interface: existence and properties of interface prototype object's "constructor" property
PASS MediaStreamTrack interface: existence and properties of interface prototype object's @@unscopables property
PASS MediaStreamTrack interface: attribute kind
PASS MediaStreamTrack interface: attribute id
PASS MediaStreamTrack interface: attribute label
PASS MediaStreamTrack interface: attribute enabled
PASS MediaStreamTrack interface: attribute muted
PASS MediaStreamTrack interface: attribute onmute
PASS MediaStreamTrack interface: attribute onunmute
PASS MediaStreamTrack interface: attribute readyState
PASS MediaStreamTrack interface: attribute onended
PASS MediaStreamTrack interface: operation clone()
PASS MediaStreamTrack interface: operation stop()
PASS MediaStreamTrack interface: operation getCapabilities()
PASS MediaStreamTrack interface: operation getConstraints()
PASS MediaStreamTrack interface: operation getSettings()
PASS MediaStreamTrack interface: operation applyConstraints(MediaTrackConstraints)
PASS MediaStreamTrackEvent interface: existence and properties of interface object
PASS MediaStreamTrackEvent interface object length
PASS MediaStreamTrackEvent interface object name
PASS MediaStreamTrackEvent interface: existence and properties of interface prototype object
PASS MediaStreamTrackEvent interface: existence and properties of interface prototype object's "constructor" property
PASS MediaStreamTrackEvent interface: existence and properties of interface prototype object's @@unscopables property
PASS MediaStreamTrackEvent interface: attribute track
PASS MediaDevices interface: existence and properties of interface object
PASS MediaDevices interface object length
PASS MediaDevices interface object name
PASS MediaDevices interface: existence and properties of interface prototype object
PASS MediaDevices interface: existence and properties of interface prototype object's "constructor" property
PASS MediaDevices interface: existence and properties of interface prototype object's @@unscopables property
PASS MediaDevices interface: attribute ondevicechange
PASS MediaDevices interface: operation enumerateDevices()
PASS MediaDevices interface: operation getSupportedConstraints()
PASS MediaDevices interface: operation getUserMedia(MediaStreamConstraints)
PASS MediaDeviceInfo interface: existence and properties of interface object
PASS MediaDeviceInfo interface object length
PASS MediaDeviceInfo interface object name
PASS MediaDeviceInfo interface: existence and properties of interface prototype object
PASS MediaDeviceInfo interface: existence and properties of interface prototype object's "constructor" property
PASS MediaDeviceInfo interface: existence and properties of interface prototype object's @@unscopables property
PASS MediaDeviceInfo interface: attribute deviceId
PASS MediaDeviceInfo interface: attribute kind
PASS MediaDeviceInfo interface: attribute label
PASS MediaDeviceInfo interface: attribute groupId
PASS MediaDeviceInfo interface: operation toJSON()
PASS InputDeviceInfo interface: existence and properties of interface object
PASS InputDeviceInfo interface object length
PASS InputDeviceInfo interface object name
PASS InputDeviceInfo interface: existence and properties of interface prototype object
PASS InputDeviceInfo interface: existence and properties of interface prototype object's "constructor" property
PASS InputDeviceInfo interface: existence and properties of interface prototype object's @@unscopables property
PASS InputDeviceInfo interface: operation getCapabilities()
Harness: the test ran to completion.

